bynkc/tests/fixtures/negative/264_ws_route_param_mismatch/src/s.bynk
context s

type RoomId = opaque String
type UserId = opaque String
type ServerFrame = { text: String }
type ClientFrame = { text: String }

actor Participant { auth = Bearer(secret = "AUTH_SECRET"), identity = UserId }

agent Room {
  key id: RoomId
  store conns: Map[UserId, Connection[ServerFrame]]
  on call join(u: UserId, conn: Connection[ServerFrame]) -> Effect[()] { let _ <- conns.put(u, conn) () }
}

-- `on close`'s route param `wrongId: UserId` does not match the `on open` param
-- `roomId: RoomId` at the same position — route values are recovered positionally
-- from the connection. `bynk.ws.route_param_mismatch`.
service Gw from websocket(in: ClientFrame, out: ServerFrame) {
  on open (roomId: RoomId) -> Effect[()] by user: Participant { let _ <- Room(roomId).join(user.identity, connection) () }
  on close (wrongId: UserId) -> Effect[()] by user: Participant { () }
}
